# avm

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  K&R - Custom Style- eclipse.xml  Makefile  README.md  another_vm.sln  avm.cpp  format.sh  main.cpp
.codelite/: avm.session
.github/workflows/: build.yml
avm_cli/: avm_cli.vcxproj  main.cpp
class_file/: class_file.vcxproj  class_file.vcxproj.filters
class_file/include/class_file/: exceptions.h
class_file/include/class_file/format/: annotation.h  attributes.h  class_property.h  constant_pool.h  constant_pool_visitor.h  descriptor_type.h  exception_table.h  field_info.h  instruction.h  java_class.h  method_info.h  opcode.h  opcodes.h  with_attributes.h
class_file/include/class_file/helper/: strings.h
class_file/include/class_file/parser/: binary_reader.h  class_file_parser.h  file_reader.h  java_class_parser.h
class_file/src/format/: class_property.cpp  constant_pool.cpp  constant_pool_visitor.cpp  descriptor_type.cpp  field_info.cpp  instruction.cpp  java_class.cpp  method_info.cpp  opcode.cpp  with_attributes.cpp
class_file/src/format/attribute/: attribute_info.cpp  code.cpp  constant_value.cpp  exception_table.cpp  exceptions.cpp
class_file/src/format/constant/: class.cpp  constant_info.cpp  invoke_dynamic.cpp  method_handle.cpp  method_type.cpp  name_and_type.cpp  number.cpp  ref.cpp  string.cpp  utf8.cpp
class_file/src/helper/: strings.cpp
class_file/src/parser/: binary_reader.cpp  class_file_parser.cpp  file_reader.cpp  java_class_parser.cpp
class_parser/: class_parser.vcxproj  class_parser.vcxproj.filters
class_parser/include/: exceptions.h
class_parser/include/class_file/format/: annotation.h  class_property.h
class_parser/include/class_file/parser/: binary_reader.h
class_parser/include/format/: method_info.h  stack_map_frame.h
class_parser/include/format/constant/: constant_info.h  constant_types.h  method_type.h  name_and_type.h  number.h  utf8.h
class_parser/include/helper/: strings.h
class_parser/include/parser/: binary_reader.h  class_file_parser.h  java_class_parser.h
class_parser/src/format/: class_property.cpp  field_info.cpp  java_class.cpp  with_attributes.cpp
class_parser/src/format/constant/: constant_info.cpp  invoke_dynamic.cpp  method_handle.cpp  method_type.cpp  name_and_type.cpp  number.cpp  ref.cpp  string.cpp  utf8.cpp
class_parser/src/helper/: strings.cpp
class_parser/src/parser/: binary_reader.cpp  class_file_parser.cpp  java_class_parser.cpp
docs/: architecture.md
examples/hello/: HelloWorld.java
include/: class_parser.h  exceptions.h
include/format/: access_flags.h  annotation.h  attribute_info.h  class_file.h  class_property.h  constant_pool.h  constant_printer.h  constant_visitor.h  constants.h  field_info.h  java_class.h  method_info.h  types.h
include/format/constant/: class.h  constant_info.h  invoke_dynamic.h  method_handle.h  number.h  utf8.h
include/format/constants/: constant_types.h  shared_constant_types.h
include/parser/: class_file_parser.h  java_class_parser.h
include/utils/: ieee754.h  number_parser.h
include/vm/: class_loader.h  classpath_class_loader.h  jvm.h  method_area.h
src/: class_file.cpp  class_parser.cpp  main.cpp
src/format/: attribute_info.cpp  class_file.cpp  class_property.cpp  constant_pool.cpp  constant_printer.cpp  constant_visitor.cpp  field_info.cpp  java_class.cpp  method_info.cpp
src/format/constant/: class.cpp  constant_info.cpp  method_type.cpp  utf8.cpp
src/format/constants/: constant_types.cpp  shared_constant_types.cpp
src/parser/: class_file_parser.cpp  java_class_parser.cpp
src/utils/: ieee754.cpp  number_parser.cpp
src/vm/: classpath_class_loader.cpp  jvm.cpp  method_area.cpp
test/: Complex.java  class_parser_test.cpp  constants_test.cpp  ieee754_test.cpp  number_parser_test.cpp
test/res/: compile.sh
test/res/com/test/: Constants.java  Simple.java  SingleMethod.java
test/resources/: Complex.java
test/src/: class_file_parser_test.cpp
test/src/format/constant/: test_constant_info.cpp
test/src/parser/: test_base_info.cpp  test_constant_pool.cpp  test_fields.cpp  test_interfaces.cpp  test_methods.cpp
test/src/vm/: test_classpath_class_loader.cpp  test_method_area.cpp
tests/: tests.vcxproj  tests.vcxproj.filters
tests/lib/googletest-1.8.0/Mdd/: gtest_main.lib
tests/res/: compile.sh
tests/res/com/: Misc.java
tests/res/com/op/: ConstantOperations.java  ControlFlow.java  Counter.java  FieldOperations.java  MathOperations.java  NativeCall.java  ObjectOperations.java  Test.java
tests/res/com/test/: ComplexMethod.java  Constants.java  Fields.java  MultipleInterfaces.java  SimpleField.java  SingleField.java
tests/res/com/vm/: App.java  HelloWorld.java
tests/res/java/io/: PrintStream.java
tests/res/java/lang/: String.java  System.java
tests/src/format/: test_descriptor_parsing.cpp  test_java_class.cpp
tests/src/format/constant/: test_number.cpp  test_utf8.cpp
tests/src/helper/: test_strings.cpp
tests/src/parser/: test_base_info.cpp  test_binary_reader.cpp  test_constant_pool.cpp  test_fields.cpp  test_interfaces.cpp  test_methods.cpp  test_mnemonic_mapping.cpp
tests/src/vm/: test_classpath_class_loader.cpp  test_method_area.cpp  test_virtual_machine.cpp
tests/src/vm/interpreter/: test_instructions.cpp  test_invoke_references_instructions.cpp
vm/: vm.vcxproj  vm.vcxproj.filters
vm/include/vm/: class_loader.h  classpath_class_loader.h  exceptions.h  heap.h  interpreter.h  method_area.h  thread_context.h  virtual_machine.h
vm/src/: class_loader.cpp  classpath_class_loader.cpp  interpreter.cpp  method_area.cpp  virtual_machine.cpp
vm/src/interpreter/: comparisons.cpp  constants.cpp  control.cpp  conversions.cpp  extended.cpp  loads.cpp  math.cpp  references.cpp  reserved.cpp  stack.cpp  stores.cpp
vm/src/runtime/: frame.cpp  heap.cpp  local_variables.cpp  method_area.cpp  operand_stack.cpp  slot.cpp  virtual_machine.cpp  vm_class.cpp  vm_field.cpp  vm_method.cpp  vm_stack.cpp  vm_thread.cpp
vm/src/util/: numbers.cpp
(+58 files in other folders)
